# fade-launcher

./: .gitignore  Cargo.toml  README.md  WARP.md
src/: app.rs  config.rs  main.rs  search.rs  theme.rs  ui.rs
